# use_drf

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
templates/: base.html
use_DRF/: asgi.py  settings.py  shema_api.py  urls.py  wsgi.py
women/: permissions.py  routers.py  serializers.py  views.py
women/migrations/: 0001_initial.py  0002_women_user.py
